--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "MyNewProject",
     "slug": "MyNewProject",
     "version": "1.0.0",
+    "sdkVersion": "51.0.0",
+    "platforms": ["ios", "android", "web"],
+    "projectId": "your-project-id",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -12,7 +15,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yourname.yourapp"
     },
     "android": {
       "adaptiveIcon": {
